2008-11-09  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkfilechooser.c (Init_gtk_file_chooser): fix ifdef guard target.

2008-11-07  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkuimanager.c (rbuimanager_mark): mark unmarked object.

2008-11-03  Kouhei Sutou  <kou@cozmixng.org>

	* src/: split GDK related headers.

2008-11-01  Kouhei Sutou  <kou@cozmixng.org>

	* src/global.h: fix #ifdef condition.

	* src/rbgtk.h: remove a needless header.

	* src/: use RARRAY_PTR() and RARRAY_LEN().

	* test/test_gtk_widget.rb
	(TestGtkWidget#test_modify_color_component_with_nil_color): add.

	* src/rbgtk.h (RVAL2GDKCOLOR, GDKCOLOR2RVAL): move to ...
	* src/rbgtkconversions.h: ... here.

	* src/rbgtkwidget.c: use RVAL2GTKSTATETYPE().

	* src/rbgtkconversions.h: add conversions:
	- RVAL2GTKSTATETYPE
	- GTKRCFLAGS2RVAL
	- RVAL2GTKRCFLAGS

	* src/rbgtkrcstyle.c, test/test_gtk_rc_style.rb: fix type
	conversion.
	Bug #2195432: Gtk::RCStyle.set_color_flags wrong conversion
	Reported by Jesse van den Kieboom. Thanks!!!

2008-10-25  Kouhei Sutou  <kou@cozmixng.org>

	* test/test_gtk_unix_print.rb (TestGtkUnixPrint#test_classes):
	assert_const_not_defined -> assert_not_const_defined.

2008-10-23  Kouhei Sutou  <kou@cozmixng.org>

	* test/test_gtk_unix_print.rb, test/test_gdk_gc.rb: use
	assert_const_defined and assert_const_not_defined.

2008-10-22  Guillaume Cottenceau

	* test/test_gdk_gc.rb: add a basic Gdk::GC autotest

2008-10-18  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkaction.c, src/rbgtkactiongroup.c, src/rbgtkcontainer.c,
	src/rbgtkuimanager.c: fix GC problems.
	Reported by Andrew S. Townley. Thanks!!!

2008-10-04  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkfilechooser.c: check GTK_FILE_SYSTEM_ERROR availability.
	Reported by Philipp Götzinger. Thanks!!!

2008-10-03  Kouhei Sutou  <kou@cozmixng.org>

	* src/makeinits.rb: fix a bug that init function is deleted.
	Reported by kimura wataru. Thanks!!!

2008-10-01  Kouhei Sutou  <kou@cozmixng.org>
