@@ -10,4 +10,16 @@ class TestGC < Test::Unit::TestCase
       GC.start
     end
   end
+
+  def test_inheritance_and_gc
+    button = Class.new(Gtk::Button)
+    box = Gtk::HBox.new
+    n = 10
+    n.times do
+      box.add(button.new)
+    end
+    GC.start
+    assert_equal([button] * 10,
+                 box.children.collect {|item| item.class})
+  end
 end
